feat(signal): add fluent map method to Computed signals
Add fluent map transformation support to Computed reactive signals. Also include these fixes and additions:
- Update Arc context checks in test files to use Core.scene instead of Core.app
- Add mock App and Graphics initialization for LayoutTest to prevent test skips
- Replace platform-dependent Files.readString with explicit UTF-8 file reading across multiple tests
- Simplify ComputedTest by using the new map method instead of manual Signal.computed wrapping
- Fix InputWidgetsTest to use Arrays.asList for compatible list initialization
- Add new OpenSpec skill and workflow files for opsx automation tooling