@@ -52,7 +52,7 @@ class ReactiveContextTest {
         };
         String content = null;
         for (Path p : candidates) {
-            if (Files.exists(p)) { content = Files.readString(p); break; }
+            if (Files.exists(p)) { content = new String(Files.readAllBytes(p), java.nio.charset.StandardCharsets.UTF_8); break; }
         }
         // fallback search from root
         if (content == null) {
@@ -61,7 +61,7 @@ class ReactiveContextTest {
             Path cur = root;
             for (int i = 0; i < 5; i++) {
                 Path candidate = cur.resolve("solim/src/solim/signal/ReactiveContext.java");
-                if (Files.exists(candidate)) { content = Files.readString(candidate); break; }
+                if (Files.exists(candidate)) { content = new String(Files.readAllBytes(candidate), java.nio.charset.StandardCharsets.UTF_8); break; }
                 cur = cur.getParent();
                 if (cur == null) break;
             }
